--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     background: linear-gradient(to right, #cac531, #f3f9a7);
+    width: 100%;
+    height: 100vh;
 }
