--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
 .container{
+    width: 30%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
 .logo{
-    width: 50%;
+    width: 70%;
+}
+
+h3{
+    margin: 1.2em;
+    text-align: center;
 }
