--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .container{
-    width: 30%;
+    width: 55%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,7 +10,19 @@
     width: 70%;
 }
 
+.card-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #f48b29;
+    border-radius: 20px;
+    margin-top: 1em;
+}
+
 h3{
-    margin: 1.2em;
+    margin-top: 0.5em;
     text-align: center;
+    color: white;
+    font-weight: 600;
 }
