--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,20 +1,31 @@
-.card-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #f48b29;
-    border-radius: 20px;
-    margin-top: 2em;
-}
-
 .card{
-    width: 40%;
+    width: 300px;
+    height: 250px;
     margin-bottom: 1em;
     border-radius: 10px;
+    cursor: pointer;
 }
 
+.card:hover{
+    box-shadow: 8px 8px 20px 1px #8b8cdf, -8px -8px 20px 1px #8b8cdf;
+}
+
+.card-body{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+
 .card-img{
-    width: 93.2px;
-    height: 93.2px;
+    width: 60%;
+    height: 70%;
+}
+
+.card-title{
+    text-align: center;
 }
