--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
@@ -10,4 +11,5 @@ body{
     height: 100vh;
     display: flex;
     justify-content: center;
+    margin: 1em;
 }
