--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -10,6 +10,12 @@
     box-shadow: 8px 8px 20px 1px #8b8cdf, -8px -8px 20px 1px #8b8cdf;
 }
 
+.card:hover .card-img{
+    width: 80%;
+    height: 80%;
+
+}
+
 .card-body{
     height: 100%;
     display: flex;
@@ -18,12 +24,10 @@
     align-items: center;
 }
 
-
-
-
 .card-img{
-    width: 60%;
+    width: 70%;
     height: 70%;
+    transition: all 0.5s;
 }
 
 .card-title{
