--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 body{
     background: linear-gradient(to right, #cac531, #f3f9a7);
-    width: 100%;
+    max-width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
