--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -40,6 +40,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     font-size: 1.3rem;
 }
